--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://nostree.me/876raiden@swarmstr.com'" />
+<meta http-equiv="Refresh" content="0; url='https://nlj.gov.jm/" />
